--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -15,6 +15,7 @@
     "experience": "Work experience",
     "experience nav": "Experience",
     "bts": "BTEC Higher National Diploma in web development",
-    "cv": "/cvEN.pdf"
+    "cv": "/cvEN.pdf",
+    "page title": "Tom Sabatier - Junior Web Developer"
   }
   
