--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -15,6 +15,7 @@
     "experience": "Experience",
     "experience nav": "Experience",
     "bts": "BTS SIO",
-    "cv": "/cv.pdf"
+    "cv": "/cv.pdf",
+    "page title": "Tom Sabatier - Développeur Web Junior"
   }
   
