--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -16,6 +16,7 @@
     "experience nav": "Experience",
     "bts": "BTEC Higher National Diploma in web development",
     "cv": "/cvEN.pdf",
-    "page title": "Tom Sabatier - Junior Web Developer"
+    "page title": "Tom Sabatier - Junior Web Developer",
+    "home": "Home"
   }
   
