--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -16,6 +16,7 @@
     "experience nav": "Experience",
     "bts": "BTS SIO Option SLAM",
     "cv": "/cv.pdf",
-    "page title": "Tom Sabatier - Développeur Web Junior"
+    "page title": "Tom Sabatier - Développeur Web Junior",
+    "home": "Accueil"
   }
   
