--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,6 +17,7 @@
     "bts": "BTEC Higher National Diploma in web development",
     "cv": "/cvEN.pdf",
     "page title": "Tom Sabatier - Junior Web Developer",
-    "home": "Home"
+    "home": "Home",
+    "adresse": "Location"
   }
   
