--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -17,6 +17,7 @@
     "bts": "BTS SIO Option SLAM",
     "cv": "/cv.pdf",
     "page title": "Tom Sabatier - Développeur Web Junior",
-    "home": "Accueil"
+    "home": "Accueil",
+    "adresse": "Adresse"
   }
   
