--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -1,6 +1,6 @@
 {
     "jobTitle": "Développeur Web Junior ",
-    "titleAbout": "Moi",
+    "titleAbout": "A propos",
     "textAbout1":"Je suis développeur web junior et me passionne pour le développement back-end.",
     "textAbout2":"Je porte également un intérêt à développer des applications front-end.",
     "textAbout3":"Toutes les technologies avec lesquelles nous travaillons évoluent à une vitesse folle, cela rend ce métier passionnant.",
