--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -7,7 +7,7 @@
     "textAbout4":"Voici quelques technologies sur lesquelles je travaille/mintéresse :",
     "downloadCv":"Télécharger mon CV",
     "responsability": "Responsabilité :",
-    "responsability1":"Tout le web de lentreprise",
+    "responsability1":"Tout le web de l'entreprise",
     "responsability2":"Refonte du site principal sous Symfony 4",
     "skills":"Compétences",
     "contact":"Contactez moi",
